# DinerTogether

./: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
docs/: openapi.json  openapi.yml
infra/: .env.example  README.md  docker-compose-develop.yaml  docker-compose.yaml  nginx.conf
src/: alembic.ini  main.py
src/api/: metadata.py  routers.py
src/api/endpoints/: __init__.py  auth.py  booking.py  cafe.py  dish.py  media.py  slot.py  table.py  user.py
src/core/: alembic_models.py  base_model.py  celery_app.py  constants.py  dependencies.py  initial_data.py  logging.py  security.py  services.py  settings.py  validators.py
src/crud/: __init__.py  base.py  booking.py  cafe.py  dish.py  media.py  slot.py  table.py  user.py
src/migrations/: env.py
src/migrations/versions/: 2026_06_09_15_23_783c6adcadbc_create_user_model.py  2026_06_09_15_28_6edab243e58c_create_media_model.py  2026_06_09_16_22_a3a967639cfc_create_cafe_model.py  2026_06_09_16_25_a929ffae6d1b_create_table_model.py  2026_06_09_16_28_2e84449e8cd5_create_timeslot_model.py  2026_06_09_19_07_b49fdb4faaed_user_add_field_telegram_id.py  2026_06_09_21_09_7cfdbff92263_create_cafemanager_model.py  2026_06_10_14_41_a765bb31fe72_create_booking_models.py  2026_06_11_20_17_71cc279c2f5a_remove_cafemanager_model.py  (+4 more)
src/models/: __init__.py  booking.py  cafe.py  dish.py  media.py  slot.py  table.py  user.py
src/schemas/: __init__.py  booking.py  cafe.py  dish.py  media.py  slot.py  table.py  token.py  user.py
src/services/: booking_service.py
src/tasks/: __init__.py  email.py  test.py
(+8 files in other folders)
